--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden; /* get rid of horizontal scroll bar */
+}
+
 .navbar{
     padding-top: 20px;
     padding-bottom: 20px;
@@ -38,21 +42,32 @@
 }
 
 .bookAppointment {
-    color: white;
-    background-color: rgb(207, 189, 25);
+    background-color: rgb(226, 206, 29);
     font-weight: 600;
     width: 300px;
     height: 60px;
     transition: transform 0.2s, background-color 0.2s;
 }
 .bookAppointment:hover {
-    color: white;
+    background-color: rgb(11, 157, 160);
+
+}
+.bookAppointment:active {
+    border-color: rgb(207, 189, 25) !important;
+    background-color: rgb(116, 104, 0) !important;
+    transform: scale(0.95);
+}
+
+.cardBookAppointment {
+    background-color: rgb(226, 206, 29);
+    transition: transform 0.2s, background-color 0.2s;
+}
+.cardBookAppointment:hover {
     border-color: rgb(207, 189, 25);
     background-color: rgb(116, 104, 0);
 
 }
-.bookAppointment:active {
-    color: white !important;
+.cardBookAppointment:active {
     border-color: rgb(207, 189, 25) !important;
     background-color: rgb(116, 104, 0) !important;
     transform: scale(0.95);
@@ -61,14 +76,35 @@
 .slogal {
     position: absolute;
     top: 410px;
-    left: 200px;
+    left: 7%;
 }
 
 .mainImage {
-    background-image: url('home_page_image.jpg');
+    background-image: url('assets/home_page_image.jpg');
     background-size: cover;
     background-position: center;
     height: 1400px;
     width: 100%;
     filter: brightness(35%) blur(2px) saturate(130%);
+}
+
+.scrollUp {
+    display: none; /* Hidden by default */
+    position: fixed;
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 100;
+    border-radius: 10px;
+    border: none; 
+    background-color: rgb(11, 157, 160); 
+    color: white; 
+    cursor: pointer; 
+    padding: 15px;
+    font-size: 18px;   
+    transition: transform 0.2s, background-color 0.2s;
+
+}
+.scrollUp:hover {
+    background-color: rgb(64, 185, 187);
+    transform: scale(1.1);
 }
