--- a/stylesheet.css
+++ b/stylesheet.css
@@ -108,3 +108,7 @@ body {
     background-color: rgb(64, 185, 187);
     transform: scale(1.1);
 }
+
+.expertPic {
+    /* transform: scale(0.5); */
+}
