--- a/stylesheet.css
+++ b/stylesheet.css
@@ -109,6 +109,22 @@ body {
     transform: scale(1.1);
 }
 
-.expertPic {
-    /* transform: scale(0.5); */
+.submit {
+    background-color: rgb(226, 206, 29);
+    font-weight: 600;
+    width: 200px;
+    height: 50px;
+    transition: transform 0.2s, background-color 0.2s;
+    margin: auto;
+    display: block;
+    
+}
+.submit:hover {
+    background-color: rgb(11, 157, 160);
+
+}
+.submit:active {
+    border-color: rgb(207, 189, 25) !important;
+    background-color: rgb(116, 104, 0) !important;
+    transform: scale(0.95);
 }
