--- a/teekay-groceries/src/styles/Products.css
+++ b/teekay-groceries/src/styles/Products.css
@@ -1,6 +1,6 @@
-.addToCart:hover {
+.add-To-Cart:hover {
   filter: brightness(0.8);
 }
-.addToCart:active {
+.add-To-Cart:active {
   filter: brightness(0.6);
 }
