--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -1,15 +1,15 @@
 .modal {
   position: relative;
   z-index: 1;
-  width: 100%;
+  width: 1440px;
   height: 100%;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
-  position: relative;
-  top: -217px;
+  position: absolute;
+  top: -29.8%;
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #000000;
